// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/Avatar Avatar Playground 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.25rem;
  height: 1.25rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #e4e7ff;
  box-sizing: border-box;
  background-color: #ffa2c3;
  color: #b2104a;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 0.625rem;
  font-weight: 500;
  line-height: 1.25rem;
  letter-spacing: 0;
}

.emotion-2 img {
  border-radius: #e4e7ff;
  width: 100%;
  height: 100%;
}

.emotion-5 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-6 {
  fill: #b2104a;
  width: 1rem;
  height: 1rem;
}

.emotion-6 path {
  fill: #b2104a;
}

<div
  style={
    Object {
      "backgroundColor": "#F2F2F2",
      "flex": 1,
      "flexDirection": "column",
      "height": "100vh",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "justifyContent": "flex-end",
        }
      }
    >
      <button
        className="emotion-0"
        onClick={[Function]}
      >
        turn 
        dark
         on
      </button>
    </div>
    <div
      className="emotion-1"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
          data-testid="_avatar"
        >
          JN
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
          data-testid="_avatar"
        >
          <img
            src="https://mui.com/static/images/avatar/1.jpg"
          />
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
          data-testid="_avatar"
        >
          <span
            className="emotion-5"
            onClick={[Function]}
          >
            <span
              className="emotion-6"
            />
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Avatar Avatar Stack 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 div:last-child {
  width: 1.25rem;
}

.emotion-3 {
  z-index: 6;
  width: 1rem;
}

.emotion-4 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.25rem;
  height: 1.25rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #e4e7ff;
  box-sizing: border-box;
  background-color: #b9cdfc;
  color: #1451dc;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 0.625rem;
  font-weight: 500;
  line-height: 1.25rem;
  letter-spacing: 0;
}

.emotion-4 img {
  border-radius: #e4e7ff;
  width: 100%;
  height: 100%;
}

.emotion-5 {
  z-index: 5;
  width: 1rem;
}

.emotion-7 {
  z-index: 4;
  width: 1rem;
}

.emotion-9 {
  z-index: 3;
  width: 1rem;
}

.emotion-11 {
  z-index: 0;
  width: 1rem;
}

.emotion-13 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-13 div:last-child {
  width: 1.5rem;
}

.emotion-14 {
  z-index: 6;
  width: 1.2000000000000002rem;
}

.emotion-15 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.5rem;
  height: 1.5rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #e4e7ff;
  box-sizing: border-box;
  background-color: #b9cdfc;
  color: #1451dc;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 0.75rem;
  font-weight: 500;
  line-height: 1.125rem;
  letter-spacing: .25;
}

.emotion-15 img {
  border-radius: #e4e7ff;
  width: 100%;
  height: 100%;
}

.emotion-16 {
  z-index: 5;
  width: 1.2000000000000002rem;
}

.emotion-18 {
  z-index: 4;
  width: 1.2000000000000002rem;
}

.emotion-20 {
  z-index: 3;
  width: 1.2000000000000002rem;
}

.emotion-22 {
  z-index: 0;
  width: 1.2000000000000002rem;
}

.emotion-24 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-24 div:last-child {
  width: 2.25rem;
}

.emotion-25 {
  z-index: 6;
  width: 1.8rem;
}

.emotion-26 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 2.25rem;
  height: 2.25rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #e4e7ff;
  box-sizing: border-box;
  background-color: #b9cdfc;
  color: #1451dc;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.25rem;
  letter-spacing: .25;
}

.emotion-26 img {
  border-radius: #e4e7ff;
  width: 100%;
  height: 100%;
}

.emotion-27 {
  z-index: 5;
  width: 1.8rem;
}

.emotion-29 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-30 {
  fill: #1451dc;
  width: 1.8rem;
  height: 1.8rem;
}

.emotion-30 path {
  fill: #1451dc;
}

.emotion-31 {
  z-index: 4;
  width: 1.8rem;
}

.emotion-33 {
  z-index: 0;
  width: 1.8rem;
}

.emotion-35 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-35 div:last-child {
  width: 3rem;
}

.emotion-36 {
  z-index: 6;
  width: 2.4000000000000004rem;
}

.emotion-37 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 3rem;
  height: 3rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #e4e7ff;
  box-sizing: border-box;
  background-color: #b9cdfc;
  color: #1451dc;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 1rem;
  font-weight: 500;
  line-height: 1.375rem;
  letter-spacing: 0.1;
}

.emotion-37 img {
  border-radius: #e4e7ff;
  width: 100%;
  height: 100%;
}

.emotion-38 {
  z-index: 5;
  width: 2.4000000000000004rem;
}

.emotion-40 {
  z-index: 4;
  width: 2.4000000000000004rem;
}

.emotion-42 {
  z-index: 3;
  width: 2.4000000000000004rem;
}

.emotion-44 {
  z-index: 0;
  width: 2.4000000000000004rem;
}

.emotion-46 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-46 div:last-child {
  width: 4rem;
}

.emotion-47 {
  z-index: 6;
  width: 3.2rem;
}

.emotion-48 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 4rem;
  height: 4rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #e4e7ff;
  box-sizing: border-box;
  background-color: #b9cdfc;
  color: #1451dc;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 1.5rem;
  font-weight: 500;
  line-height: 2rem;
  letter-spacing: 0;
}

.emotion-48 img {
  border-radius: #e4e7ff;
  width: 100%;
  height: 100%;
}

.emotion-49 {
  z-index: 5;
  width: 3.2rem;
}

.emotion-52 {
  fill: #1451dc;
  width: 3.2rem;
  height: 3.2rem;
}

.emotion-52 path {
  fill: #1451dc;
}

.emotion-53 {
  z-index: 4;
  width: 3.2rem;
}

.emotion-55 {
  z-index: 0;
  width: 3.2rem;
}

.emotion-57 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-57 div:last-child {
  width: 5.5rem;
}

.emotion-58 {
  z-index: 6;
  width: 4.4rem;
}

.emotion-59 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 5.5rem;
  height: 5.5rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #e4e7ff;
  box-sizing: border-box;
  background-color: #b9cdfc;
  color: #1451dc;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 2rem;
  font-weight: 500;
  line-height: 2.5rem;
  letter-spacing: 0;
}

.emotion-59 img {
  border-radius: #e4e7ff;
  width: 100%;
  height: 100%;
}

.emotion-60 {
  z-index: 5;
  width: 4.4rem;
}

.emotion-63 {
  fill: #1451dc;
  width: 4.4rem;
  height: 4.4rem;
}

.emotion-63 path {
  fill: #1451dc;
}

.emotion-64 {
  z-index: 4;
  width: 4.4rem;
}

.emotion-66 {
  z-index: 0;
  width: 4.4rem;
}

<div
  style={
    Object {
      "backgroundColor": "#F2F2F2",
      "flex": 1,
      "flexDirection": "column",
      "height": "100vh",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "justifyContent": "flex-end",
        }
      }
    >
      <button
        className="emotion-0"
        onClick={[Function]}
      >
        turn 
        dark
         on
      </button>
    </div>
    <div
      className="emotion-1"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
          data-testid="avatarstack"
        >
          <div
            className="emotion-3"
          >
            <div
              className="emotion-4"
              data-testid="_avatar"
            >
              <img
                src="https://mui.com/static/images/avatar/6.jpg"
              />
            </div>
          </div>
          <div
            className="emotion-5"
          >
            <div
              className="emotion-4"
              data-testid="_avatar"
            >
              <img
                src="https://mui.com/static/images/avatar/5.jpg"
              />
            </div>
          </div>
          <div
            className="emotion-7"
          >
            <div
              className="emotion-4"
              data-testid="_avatar"
            >
              JN
            </div>
          </div>
          <div
            className="emotion-9"
          >
            <div
              className="emotion-4"
              data-testid="_avatar"
            >
              <img
                src="https://mui.com/static/images/avatar/3.jpg"
              />
            </div>
          </div>
          <div
            className="emotion-11"
          >
            <div
              className="emotion-4"
              data-testid="_avatar"
            >
              +
              2
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-13"
          data-testid="avatarstack"
        >
          <div
            className="emotion-14"
          >
            <div
              className="emotion-15"
              data-testid="_avatar"
            >
              <img
                src="https://mui.com/static/images/avatar/6.jpg"
              />
            </div>
          </div>
          <div
            className="emotion-16"
          >
            <div
              className="emotion-15"
              data-testid="_avatar"
            >
              <img
                src="https://mui.com/static/images/avatar/5.jpg"
              />
            </div>
          </div>
          <div
            className="emotion-18"
          >
            <div
              className="emotion-15"
              data-testid="_avatar"
            >
              JN
            </div>
          </div>
          <div
            className="emotion-20"
          >
            <div
              className="emotion-15"
              data-testid="_avatar"
            >
              <img
                src="https://mui.com/static/images/avatar/3.jpg"
              />
            </div>
          </div>
          <div
            className="emotion-22"
          >
            <div
              className="emotion-15"
              data-testid="_avatar"
            >
              +
              2
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-24"
          data-testid="avatarstack"
        >
          <div
            className="emotion-25"
          >
            <div
              className="emotion-26"
              data-testid="_avatar"
            >
              <img
                src="https://mui.com/static/images/avatar/6.jpg"
              />
            </div>
          </div>
          <div
            className="emotion-27"
          >
            <div
              className="emotion-26"
              data-testid="_avatar"
            >
              <span
                className="emotion-29"
                onClick={[Function]}
              >
                <span
                  className="emotion-30"
                />
              </span>
            </div>
          </div>
          <div
            className="emotion-31"
          >
            <div
              className="emotion-26"
              data-testid="_avatar"
            >
              <img
                src="https://mui.com/static/images/avatar/4.jpg"
              />
            </div>
          </div>
          <div
            className="emotion-33"
          >
            <div
              className="emotion-26"
              data-testid="_avatar"
            >
              +
              3
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-35"
          data-testid="avatarstack"
        >
          <div
            className="emotion-36"
          >
            <div
              className="emotion-37"
              data-testid="_avatar"
            >
              <img
                src="https://mui.com/static/images/avatar/6.jpg"
              />
            </div>
          </div>
          <div
            className="emotion-38"
          >
            <div
              className="emotion-37"
              data-testid="_avatar"
            >
              <img
                src="https://mui.com/static/images/avatar/5.jpg"
              />
            </div>
          </div>
          <div
            className="emotion-40"
          >
            <div
              className="emotion-37"
              data-testid="_avatar"
            >
              <img
                src="https://mui.com/static/images/avatar/4.jpg"
              />
            </div>
          </div>
          <div
            className="emotion-42"
          >
            <div
              className="emotion-37"
              data-testid="_avatar"
            >
              <img
                src="https://mui.com/static/images/avatar/3.jpg"
              />
            </div>
          </div>
          <div
            className="emotion-44"
          >
            <div
              className="emotion-37"
              data-testid="_avatar"
            >
              +
              2
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-46"
          data-testid="avatarstack"
        >
          <div
            className="emotion-47"
          >
            <div
              className="emotion-48"
              data-testid="_avatar"
            >
              <img
                src="https://mui.com/static/images/avatar/6.jpg"
              />
            </div>
          </div>
          <div
            className="emotion-49"
          >
            <div
              className="emotion-48"
              data-testid="_avatar"
            >
              <span
                className="emotion-29"
                onClick={[Function]}
              >
                <span
                  className="emotion-52"
                />
              </span>
            </div>
          </div>
          <div
            className="emotion-53"
          >
            <div
              className="emotion-48"
              data-testid="_avatar"
            >
              <img
                src="https://mui.com/static/images/avatar/4.jpg"
              />
            </div>
          </div>
          <div
            className="emotion-55"
          >
            <div
              className="emotion-48"
              data-testid="_avatar"
            >
              +
              3
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-57"
          data-testid="avatarstack"
        >
          <div
            className="emotion-58"
          >
            <div
              className="emotion-59"
              data-testid="_avatar"
            >
              <img
                src="https://mui.com/static/images/avatar/6.jpg"
              />
            </div>
          </div>
          <div
            className="emotion-60"
          >
            <div
              className="emotion-59"
              data-testid="_avatar"
            >
              <span
                className="emotion-29"
                onClick={[Function]}
              >
                <span
                  className="emotion-63"
                />
              </span>
            </div>
          </div>
          <div
            className="emotion-64"
          >
            <div
              className="emotion-59"
              data-testid="_avatar"
            >
              <img
                src="https://mui.com/static/images/avatar/4.jpg"
              />
            </div>
          </div>
          <div
            className="emotion-66"
          >
            <div
              className="emotion-59"
              data-testid="_avatar"
            >
              +
              3
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Avatar Avatar with icon 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.25rem;
  height: 1.25rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #e4e7ff;
  box-sizing: border-box;
  background-color: #b9cdfc;
  color: #1451dc;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 0.625rem;
  font-weight: 500;
  line-height: 1.25rem;
  letter-spacing: 0;
}

.emotion-2 img {
  border-radius: #e4e7ff;
  width: 100%;
  height: 100%;
}

.emotion-3 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-4 {
  fill: #1451dc;
  width: 1rem;
  height: 1rem;
}

.emotion-4 path {
  fill: #1451dc;
}

.emotion-5 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.5rem;
  height: 1.5rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #e4e7ff;
  box-sizing: border-box;
  background-color: #b9cdfc;
  color: #1451dc;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 0.75rem;
  font-weight: 500;
  line-height: 1.125rem;
  letter-spacing: .25;
}

.emotion-5 img {
  border-radius: #e4e7ff;
  width: 100%;
  height: 100%;
}

.emotion-7 {
  fill: #1451dc;
  width: 1.2000000000000002rem;
  height: 1.2000000000000002rem;
}

.emotion-7 path {
  fill: #1451dc;
}

.emotion-8 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 2.25rem;
  height: 2.25rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #e4e7ff;
  box-sizing: border-box;
  background-color: #b9cdfc;
  color: #1451dc;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.25rem;
  letter-spacing: .25;
}

.emotion-8 img {
  border-radius: #e4e7ff;
  width: 100%;
  height: 100%;
}

.emotion-10 {
  fill: #1451dc;
  width: 1.8rem;
  height: 1.8rem;
}

.emotion-10 path {
  fill: #1451dc;
}

.emotion-11 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 3rem;
  height: 3rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #e4e7ff;
  box-sizing: border-box;
  background-color: #b9cdfc;
  color: #1451dc;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 1rem;
  font-weight: 500;
  line-height: 1.375rem;
  letter-spacing: 0.1;
}

.emotion-11 img {
  border-radius: #e4e7ff;
  width: 100%;
  height: 100%;
}

.emotion-13 {
  fill: #1451dc;
  width: 2.4000000000000004rem;
  height: 2.4000000000000004rem;
}

.emotion-13 path {
  fill: #1451dc;
}

.emotion-14 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 4rem;
  height: 4rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #e4e7ff;
  box-sizing: border-box;
  background-color: #b9cdfc;
  color: #1451dc;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 1.5rem;
  font-weight: 500;
  line-height: 2rem;
  letter-spacing: 0;
}

.emotion-14 img {
  border-radius: #e4e7ff;
  width: 100%;
  height: 100%;
}

.emotion-16 {
  fill: #1451dc;
  width: 3.2rem;
  height: 3.2rem;
}

.emotion-16 path {
  fill: #1451dc;
}

.emotion-17 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 5.5rem;
  height: 5.5rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #e4e7ff;
  box-sizing: border-box;
  background-color: #b9cdfc;
  color: #1451dc;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 2rem;
  font-weight: 500;
  line-height: 2.5rem;
  letter-spacing: 0;
}

.emotion-17 img {
  border-radius: #e4e7ff;
  width: 100%;
  height: 100%;
}

.emotion-19 {
  fill: #1451dc;
  width: 4.4rem;
  height: 4.4rem;
}

.emotion-19 path {
  fill: #1451dc;
}

<div
  style={
    Object {
      "backgroundColor": "#F2F2F2",
      "flex": 1,
      "flexDirection": "column",
      "height": "100vh",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "justifyContent": "flex-end",
        }
      }
    >
      <button
        className="emotion-0"
        onClick={[Function]}
      >
        turn 
        dark
         on
      </button>
    </div>
    <div
      className="emotion-1"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
          data-testid="_avatar"
        >
          <span
            className="emotion-3"
            onClick={[Function]}
          >
            <span
              className="emotion-4"
            />
          </span>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-5"
          data-testid="_avatar"
        >
          <span
            className="emotion-3"
            onClick={[Function]}
          >
            <span
              className="emotion-7"
            />
          </span>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-8"
          data-testid="_avatar"
        >
          <span
            className="emotion-3"
            onClick={[Function]}
          >
            <span
              className="emotion-10"
            />
          </span>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-11"
          data-testid="_avatar"
        >
          <span
            className="emotion-3"
            onClick={[Function]}
          >
            <span
              className="emotion-13"
            />
          </span>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-14"
          data-testid="_avatar"
        >
          <span
            className="emotion-3"
            onClick={[Function]}
          >
            <span
              className="emotion-16"
            />
          </span>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-17"
          data-testid="_avatar"
        >
          <span
            className="emotion-3"
            onClick={[Function]}
          >
            <span
              className="emotion-19"
            />
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Avatar Avatar with letter 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.25rem;
  height: 1.25rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #e4e7ff;
  box-sizing: border-box;
  background-color: #b9cdfc;
  color: #1451dc;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 0.625rem;
  font-weight: 500;
  line-height: 1.25rem;
  letter-spacing: 0;
}

.emotion-2 img {
  border-radius: #e4e7ff;
  width: 100%;
  height: 100%;
}

.emotion-3 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.5rem;
  height: 1.5rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #e4e7ff;
  box-sizing: border-box;
  background-color: #b9cdfc;
  color: #1451dc;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 0.75rem;
  font-weight: 500;
  line-height: 1.125rem;
  letter-spacing: .25;
}

.emotion-3 img {
  border-radius: #e4e7ff;
  width: 100%;
  height: 100%;
}

.emotion-4 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 2.25rem;
  height: 2.25rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #e4e7ff;
  box-sizing: border-box;
  background-color: #b9cdfc;
  color: #1451dc;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.25rem;
  letter-spacing: .25;
}

.emotion-4 img {
  border-radius: #e4e7ff;
  width: 100%;
  height: 100%;
}

.emotion-5 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 3rem;
  height: 3rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #e4e7ff;
  box-sizing: border-box;
  background-color: #b9cdfc;
  color: #1451dc;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 1rem;
  font-weight: 500;
  line-height: 1.375rem;
  letter-spacing: 0.1;
}

.emotion-5 img {
  border-radius: #e4e7ff;
  width: 100%;
  height: 100%;
}

.emotion-6 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 4rem;
  height: 4rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #e4e7ff;
  box-sizing: border-box;
  background-color: #b9cdfc;
  color: #1451dc;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 1.5rem;
  font-weight: 500;
  line-height: 2rem;
  letter-spacing: 0;
}

.emotion-6 img {
  border-radius: #e4e7ff;
  width: 100%;
  height: 100%;
}

.emotion-7 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 5.5rem;
  height: 5.5rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #e4e7ff;
  box-sizing: border-box;
  background-color: #b9cdfc;
  color: #1451dc;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 2rem;
  font-weight: 500;
  line-height: 2.5rem;
  letter-spacing: 0;
}

.emotion-7 img {
  border-radius: #e4e7ff;
  width: 100%;
  height: 100%;
}

<div
  style={
    Object {
      "backgroundColor": "#F2F2F2",
      "flex": 1,
      "flexDirection": "column",
      "height": "100vh",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "justifyContent": "flex-end",
        }
      }
    >
      <button
        className="emotion-0"
        onClick={[Function]}
      >
        turn 
        dark
         on
      </button>
    </div>
    <div
      className="emotion-1"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
          data-testid="_avatar"
        >
          JN
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-3"
          data-testid="_avatar"
        >
          JN
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-4"
          data-testid="_avatar"
        >
          JN
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-5"
          data-testid="_avatar"
        >
          JN
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-6"
          data-testid="_avatar"
        >
          JN
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-7"
          data-testid="_avatar"
        >
          JN
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Avatar Avatar with src 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.25rem;
  height: 1.25rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #e4e7ff;
  box-sizing: border-box;
  background-color: #b9cdfc;
  color: #1451dc;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 0.625rem;
  font-weight: 500;
  line-height: 1.25rem;
  letter-spacing: 0;
}

.emotion-2 img {
  border-radius: #e4e7ff;
  width: 100%;
  height: 100%;
}

.emotion-3 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 1.5rem;
  height: 1.5rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #e4e7ff;
  box-sizing: border-box;
  background-color: #b9cdfc;
  color: #1451dc;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 0.75rem;
  font-weight: 500;
  line-height: 1.125rem;
  letter-spacing: .25;
}

.emotion-3 img {
  border-radius: #e4e7ff;
  width: 100%;
  height: 100%;
}

.emotion-4 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 2.25rem;
  height: 2.25rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #e4e7ff;
  box-sizing: border-box;
  background-color: #b9cdfc;
  color: #1451dc;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 0.875rem;
  font-weight: 500;
  line-height: 1.25rem;
  letter-spacing: .25;
}

.emotion-4 img {
  border-radius: #e4e7ff;
  width: 100%;
  height: 100%;
}

.emotion-5 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 3rem;
  height: 3rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #e4e7ff;
  box-sizing: border-box;
  background-color: #b9cdfc;
  color: #1451dc;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 1rem;
  font-weight: 500;
  line-height: 1.375rem;
  letter-spacing: 0.1;
}

.emotion-5 img {
  border-radius: #e4e7ff;
  width: 100%;
  height: 100%;
}

.emotion-6 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 4rem;
  height: 4rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #e4e7ff;
  box-sizing: border-box;
  background-color: #b9cdfc;
  color: #1451dc;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 1.5rem;
  font-weight: 500;
  line-height: 2rem;
  letter-spacing: 0;
}

.emotion-6 img {
  border-radius: #e4e7ff;
  width: 100%;
  height: 100%;
}

.emotion-7 {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 5.5rem;
  height: 5.5rem;
  border-radius: 6.25rem;
  border: 0.0625rem solid;
  border-color: #e4e7ff;
  box-sizing: border-box;
  background-color: #b9cdfc;
  color: #1451dc;
  overflow: hidden;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  font-size: 2rem;
  font-weight: 500;
  line-height: 2.5rem;
  letter-spacing: 0;
}

.emotion-7 img {
  border-radius: #e4e7ff;
  width: 100%;
  height: 100%;
}

<div
  style={
    Object {
      "backgroundColor": "#F2F2F2",
      "flex": 1,
      "flexDirection": "column",
      "height": "100vh",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "justifyContent": "flex-end",
        }
      }
    >
      <button
        className="emotion-0"
        onClick={[Function]}
      >
        turn 
        dark
         on
      </button>
    </div>
    <div
      className="emotion-1"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
          data-testid="_avatar"
        >
          <img
            src="https://mui.com/static/images/avatar/1.jpg"
          />
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-3"
          data-testid="_avatar"
        >
          <img
            src="https://mui.com/static/images/avatar/1.jpg"
          />
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-4"
          data-testid="_avatar"
        >
          <img
            src="https://mui.com/static/images/avatar/1.jpg"
          />
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-5"
          data-testid="_avatar"
        >
          <img
            src="https://mui.com/static/images/avatar/1.jpg"
          />
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-6"
          data-testid="_avatar"
        >
          <img
            src="https://mui.com/static/images/avatar/1.jpg"
          />
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-7"
          data-testid="_avatar"
        >
          <img
            src="https://mui.com/static/images/avatar/1.jpg"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
